--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,5 +14,9 @@
      limitations under the License.
 -->
 <resources>
+    <!-- Title of the application -->
     <string name="app_name">Quake Report</string>
+
+    <!-- Default text to show with the earthquake location if no specific location offset is given -->
+    <string name="near_the">Near the</string>
 </resources>
